<resources>
    <string name="app_name">RelevAr</string>
    <string name="cargar_datos">CARGAR DATOS</string>
    <string name="relevamiento_georeferenciacion">RELEVAMIENTO | GEOREFERENCIACIÓN</string>
    <string name="encabezado">CALLE;NUMERO;COORDENADAS;GRUPO FAMILIAR;DNI;APELLIDO;NOMBRE;EDAD;UNIDAD EDAD; FECHA DE NACIMIENTO;EFECTOR;FACTORES DE RIESGO;CODIGO SISA F. DE RIESGO;VACUNAS;LOTE DE VACUNA;TELEFONO CELULAR;TELEFONO FIJO;MAIL;OBSERVACIONES;PRODUCTO DE LIMPIEZA;NOMBRE CONTACTO;TELEFONO CONTACTO;PARENTEZCO CONTACTO;OCUPACION;EDUCACION;TIPO DE VIVIENDA;PAREDES EXTERIORE;REVOQUE;EXTERIOR DEL TECHO;ARBOLES;AGUA;AGUA PARA BEBER PROVIENE;ALMACENA AGUA DE LLUVIA;ELECTRICIDAD;GAS;EXCRETAS;HABITACIONES;LA VIVIENDA ES;BAÑO;EL BAÑO TIENE;LUGAR PARA COCINAR;USA PARA COCINAR;PISOS;CIELORRAZO;ENCUESTADOR\n</string>
    <string name="encabezado_dengue" translatable="false">CALLE;NUMERO;COORDENADAS;DNI;APELLIDO;NOMBRE;N° RESIDENTES;CERRADOS O RENUENTES;TANQUES BAJOS Y ELEVADOS - BARRILES - TONELES;-;-;PILETAS - CISTERNAS - ALJIBES;-;-;CUBIERTAS;-;-;CANALETA PARA LLUVIA;-;-;HUECO - AXILA DE ARBOL;-;-;MACETAS - FLORERO - PLANTA ACUATICA;-;-;RECIPIENTE PLASTICOS;-;-;BOTELLAS VARIAS;-;-;ELEMENTOS EN DESUSO - OTROS;-;-\n</string>
    <string name="encabezado_dengue_2" translatable="false">;;;;;;;;I;T;FA;I;T;FA;I;T;FA;I;T;FA;I;T;FA;I;T;FA;I;T;FA;I;T;FA;I;T;FA;INSPECCIONADOS;TRATADOS;DESTRUIDOS;FOCO AEDICO;LARVICIDA;TIPO DE TRABAJO\n</string>
    <string name="iniciar_recorrido">INICIAR RECORRIDO</string>
    <string name="terminar_recorrido">TERMINAR RECORRIDO</string>
    <string name="reiniciar_recorrido">REINICIAR RECORRIDO</string>
    <string name="registrar_familia">REGISTRAR FAMILIA</string>
    <string name="nueva_persona">NUEVA PERSONA</string>
    <string name="terminar_grupo_familiar">TERMINAR GRUPO FAMILIAR</string>
    <string name="apellido">APELLIDO</string>
    <string name="nombre">NOMBRE</string>
    <string name="dni" translatable="false">DNI</string>
    <string name="fecha_nacimiento">FECHA_NACIMIENTO</string>
    <string name="educacion">EDUCACION</string>
    <string name="ocupacion">INGRESO Y OCUPACION</string>
    <string name="contacto">CONTACTO</string>
    <string name="efector">EFECTOR</string>
    <string name="observaciones">OBSERVACIONES</string>
    <string name="factores_riesgo">FACTORES DE RIESGO</string>
    <string name="completado">Completado:</string>
    <string name="completado_cero">Completado: 00%</string>
    <string name="guardar_persona">GUARDAR PERSONA</string>
    <string name="personas_cargadas">PERSONAS CARGADAS</string>
    <string name="celular">CELULAR</string>
    <string name="fijo">FIJO</string>
    <string name="mail" translatable="false">MAIL</string>
    <string name="persona_contacto">PERSONA DE CONTACTO</string>
    <string name="nombre_apellido_contacto">NOMBRE Y APELLIDO</string>
    <string name="telefono">TELÉFONO</string>
    <string name="parentezco_contacto">PARENTEZCO</string>
    <string name="cancelar">CANCELAR</string>
    <string name="guardar">GUARDAR</string>
    <string name="editar">EDITAR</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="nuevo">NUEVO</string>
    <string name="ingresar">INGRESAR</string>
    <string name="encuestador">ENCUESTADOR</string>
    <string name="calle">CALLE</string>
    <string name="numero">NÚMERO</string>
    <string name="miembros_familiares">MIEMBROS FAMILIARES</string>
    <string name="domicilio_familiar">DOMICILIO GRUPO FAMILIAR</string>
    <string name="si">SI</string>
    <string name="no">NO</string>
    <string name="servicios_basicos" translatable="false">SERVICIOS BASICOS</string>
    <string name="vivienda" translatable="false">VIVIENDA</string>
    <string name="electricidad" translatable="false">ELECTRICIDAD</string>
    <string name="tipo_de_vivienda" translatable="false">TIPO DE VIVIENDA</string>
    <string name="la_vivienda_es" translatable="false">LA VIVIENDA ES...</string>
    <string name="lugar_cocinar" translatable="false">LUGAR PARA COCINAR</string>
    <string name="usa_para_cocinar" translatable="false">USA PARA COCINAR...</string>
    <string name="pisos" translatable="false">MATERIAL DE LOS PISOS</string>
    <string name="paredes" translatable="false">MATERIAL PREDOMINANTE EN LAS PAREDES EXTERIORES</string>
    <string name="revestimiento" translatable="false">REVESTIMIENTO EXTERNO O REVOQUE</string>
    <string name="revestimiento_cielorrazo" translatable="false">REVESTIMIENTO INTERIOR DEL TECHO O CIELORRAZO</string>
    <string name="techo" translatable="false">MATERIAL PREDOMINANTE EN LA CUBIERTA EXTERIOR DEL TECHO</string>
    <string name="piezas" translatable="false">CANTIDAD DE AMBIENTES/HABITACIONES/PIEZAS</string>
    <string name="agua" translatable="false">AGUA</string>
    <string name="agua_beber_cocinar" translatable="false">AGUA PARA BEBER Y COCINAR, PROVIENE DE...</string>
    <string name="agua_lluvia" translatable="false">ALMACENA AGUA DE LLUVIA</string>
    <string name="gas" translatable="false">GAS</string>
    <string name="excretas" translatable="false">EXCRETAS</string>
    <string name="arboles" translatable="false">ÁRBOLES</string>
    <string name="externo_vivienda" translatable="false">INSPECCION EXTERIOR</string>
    <string name="baño" translatable="false">BAÑO</string>
    <string name="baño_tiene" translatable="false">EL BAÑO TIENE</string>
    <string name="agregar_trabajo_manualmente" translatable="false">Agregar trabajo manualmente</string>
    <string name="agregar_efector_manualmente" translatable="false">Agregar efector manualmente</string>
    <string name="nuevo_trabajo" translatable="false">NUEVO TRABAJO</string>
    <string name="listo" translatable="false">LISTO</string>
    <string name="tiene_trabajo" translatable="false">¿TIENE TRABAJO?</string>
    <string name="compartit" translatable="false">COMPARTIR</string>
    <string name="buscar_efector" translatable="false">BUSCAR EFECTOR</string>
    <string name="nuevo_efector" translatable="false">NUEVO EFECTOR</string>
    <string name="ocurrio_error" translatable="false">OCURRIO UN ERROR</string>
    <string name="sin_dato" translatable="false">SIN DATO</string>
    <string name="escuela_especial" translatable="false">ESCUELA ESPECIAL</string>
    <string name="jardin" translatable="false">JARDIN</string>
    <string name="primario" translatable="false">PRIMARIO</string>
    <string name="secundario" translatable="false">SECUNDARIO</string>
    <string name="terciario" translatable="false">TERCIARIO</string>
    <string name="universitario" translatable="false">UNIVERSITARIO</string>
    <string name="incompleto" translatable="false">INCOMPLETO</string>
    <string name="cursando" translatable="false">CURSANDO</string>
    <string name="completo" translatable="false">COMPLETO</string>
    <string name="revoque" translatable="false">REVESTIMIENTO EXTERNO O REVOQUE: incluye terminación ladrillo a la vista.</string>
    <string name="inodoro" translatable="false">INODORO CON BOTON, MOCHILA O CADENA: con sistema de arrastre de agua para su limpieza.</string>
    <string name="inodoro2" translatable="false">INODORO SIN BOTON O SIN CADENA: sin sistema de arrastre de agua (por ejemplo: balde).</string>
    <string name="casilla" translatable="false">CASILLA: está construida con materiales de baja calidad o de desecho.</string>
    <string name="rancho" translatable="false">RANCHO: generalmente tiene paredes de adobe, piso de tierra y techo de chapa o paja.</string>
    <string name="local" translatable="false">LOCAL NO CONSTRUIDO PARA HABITACION: no ha sido construido o adaptado para que habiten personas, pero que al momento del Censo es ocupado como residencia habitual.</string>
    <string name="movil" translatable="false">VIVIENDA MOVIL: puede ser transportada (tienda de campaña o carpa) o constituye una unidad móvil (barco, vagón de ferrocarril, casa rodante, camión).</string>
    <string name="modulos" translatable="false">MÓDULOS</string>
    <string name="telefono_contacto" translatable="false">TELEFONO CONTACTO</string>
    <string name="dueño_vivienda" translatable="false">DUEÑO DE LA VIVIENDA</string>
    <string name="cantidad_piezas" translatable="false">CANTIDAD DE PIEZAS</string>
    <string name="cielorraso" translatable="false">CIELORRASO</string>
    <string name="origenagua" translatable="false">ORIGEN AGUA</string>
    <string name="sexo" translatable="false">SEXO</string>
    <string name="femenino" translatable="false">F</string>
    <string name="masculino" translatable="false">M</string>
    <string name="vitamina" translatable="false">VITAMINA D</string>
    <string name="entrega_vitamina" translatable="false">¿Entrego vitamina D?</string>
    <string name="embarazo" translatable="false">EMBARAZO</string>
    <string name="fecha_parto" translatable="false">FECHA PROBABLE DE PARTO</string>
    <string name="ultimo_control" translatable="false">ULTIMO CONTROL</string>
    <string name="enfermedad_relacionada_embarazo" translatable="false">ENFERMEDAD ASOCIADA AL EMBARAZO</string>
    <string name="enfermedad" translatable="false">ENFERMEDAD</string>
    <string name="discapacidad" translatable="false">DISCAPACIDAD</string>
    <string name="certificado_unico_discapacidad" translatable="false">CERTIFICADO UNICO DE DISCAPACIDAD</string>
    <string name="tipo_discapacidad" translatable="false">TIPO DE DISCAPACIDAD</string>
    <string name="deficiencia_fisica_origen_motor" translatable="false">DEFICIENCIA FISICA DE ORIGEN MOTOR</string>
    <string name="deficiencia_fisica_origen_visceral" translatable="false">DEFICIENCIA FISICA DE ORIGEN VISCERAL</string>
    <string name="auditiva" translatable="false">AUDITIVA</string>
    <string name="deficiencia_intelectual_mental" translatable="false">DEFICIENCIA INTELECTUAL O MENTAL</string>
    <string name="deficiencia_sensorial_origen_visual" translatable="false">DEFICIENCIA SENSORIAL DE ORIGEN VISUAL</string>
    <string name="ocio" translatable="false">OCIO</string>
    <string name="adicciones" translatable="false">ADICCIONES</string>
    <string name="violencia" translatable="false">VIOLENCIA</string>
    <string name="transtornos_mentales" translatable="false">TRASTORNOS MENTALES</string>
    <string name="transtornos_en_niños" translatable="false">TRASTORNOS EN NIÑOS</string>
    <string name="acompañamiento" translatable="false">ACOMPAÑAMIENTO</string>
    <string name="recibe_acompañamiento" translatable="false">¿RECIBE ACOMPAÑAMIENTO?</string>
    <string name="deficit_atencion" translatable="false">DEFICIT DE ATENCION</string>
    <string name="trastornos_conducta" translatable="false">TRASTORNOS DE LA CONDUCTA</string>
    <string name="alcohol" translatable="false">ALCOHOL</string>
    <string name="drogas" translatable="false">DROGAS</string>
    <string name="tabaco" translatable="false">TABACO</string>
    <string name="psicologico" translatable="false">PSICOLOGICO</string>
    <string name="medico" translatable="false">MEDICO</string>
    <string name="institucion_social" translatable="false">INSTITUCION SOCIAL</string>
    <string name="deportes" translatable="false">DEPORTES</string>
    <string name="musica" translatable="false">MUSICA</string>
    <string name="baile" translatable="false">BAILE</string>
    <string name="manualidades" translatable="false">MANUALIDADES</string>
    <string name="actividad_aire_libre" translatable="false">ACTIVIDAD AL AIRE LIBRE</string>
    <string name="donde_ocio" translatable="false">¿DONDE REALIZA LAS ACTIVIDADES?</string>
    <string name="lugar" translatable="false">LUGAR</string>
    <string name="aedes" translatable="false">AEDES</string>
    <string name="enfermedad_cronica" translatable="false">ENFERMEDADES CRONICAS</string>
    <string name="HPV" translatable="false">HPV</string>
    <string name="sin_escolarizacion" translatable="false">SIN ESCOLARIZACION</string>
</resources>