<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4A4A4A">

    <TextView
        android:id="@+id/ENCABEZADOMODULOS"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="#0E5891"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/modulos"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/LISTOBOTON"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/button1"
        android:text="@string/listo"
        android:textColor="#4A4A4A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_1"
        app:layout_constraintBottom_toTopOf="@+id/LISTOBOTON"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ENCABEZADOMODULOS">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:id="@+id/SWITCHHPV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/HPV"
                android:textSize="22sp" />

            <Switch
                android:id="@+id/SWITCHINSPECCIONEXTERIOR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/externo_vivienda"
                android:textSize="22sp" />

            <Switch
                android:id="@+id/SWITCHSERVICIOSBASICOS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/servicios_basicos"
                android:textSize="22sp" />

            <Switch
                android:id="@+id/SWITCHVIVIENDA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/vivienda"
                android:textSize="22sp" />

            <Switch
                android:id="@+id/SWITCHDENGUE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/aedes"
                android:textSize="22sp" />

            <Switch
                android:id="@+id/SWITCHEDUCACION"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/educacion"
                android:textSize="22sp" />

            <Switch
                android:id="@+id/SWITCHCONTACTO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/contacto"
                android:textSize="22sp" />

            <Switch
                android:id="@+id/SWITCHOCUPACION"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/ocupacion"
                android:textSize="22sp" />

            <Switch
                android:id="@+id/SWITCHEFECTOR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/efector"
                android:textSize="22sp" />

            <Switch
                android:id="@+id/SWITCHOBSERVACIONES"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/observaciones"
                android:textSize="22sp" />

            <Switch
                android:id="@+id/SWITCHFACTORESRIESGO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/factores_riesgo"
                android:textSize="22sp" />

            <Switch
                android:id="@+id/SWITCHDISCAPACIDAD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/discapacidad"
                android:textSize="22sp" />

            <Switch
                android:id="@+id/SWITCHEMBARAZO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/embarazo"
                android:textSize="22sp" />

            <Switch
                android:id="@+id/SWITCHACOMPAÑAMIENTO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/acompañamiento"
                android:textSize="22sp" />

            <Switch
                android:id="@+id/SWITCHTRANSTORNOSENNIÑOS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/transtornos_en_niños"
                android:textSize="22sp" />

            <Switch
                android:id="@+id/SWITCHTRANSTORNOSMENTALES"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/transtornos_mentales"
                android:textSize="22sp" />

            <Switch
                android:id="@+id/SWITCHADICCIONES"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/adicciones"
                android:textSize="22sp" />

            <Switch
                android:id="@+id/SWITCHVIOLENCIA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/violencia"
                android:textSize="22sp" />

            <Switch
                android:id="@+id/SWITCHVITAMINAD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/vitamina"
                android:textSize="22sp" />

            <Switch
                android:id="@+id/SWITCHOCIO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/ocio"
                android:textSize="22sp" />

            <Switch
                android:id="@+id/SWITCHENFERMEDADCRONICA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/enfermedad_cronica"
                android:textSize="22sp" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/VOLVER"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/button_redondo_blanco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/volver" />

</androidx.constraintlayout.widget.ConstraintLayout>