<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4A4A4A">

    <TextView
        android:id="@+id/textefector"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="#0E5891"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/educacion"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/CANCELAREDUCACION"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button1"
        android:text="@string/cancelar"
        android:textColor="#4A4A4A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/GUARDAREDUCACION"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button1"
        android:text="@string/guardar"
        android:textColor="#4A4A4A"
        app:layout_constraintBottom_toBottomOf="@+id/CANCELAREDUCACION"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintStart_toEndOf="@+id/CANCELAREDUCACION"
        app:layout_constraintTop_toTopOf="@+id/CANCELAREDUCACION"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/edit_text_1"
        app:layout_constraintBottom_toTopOf="@+id/CANCELAREDUCACION"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textefector">

        <RadioGroup
            android:id="@+id/GroupEducacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/SINDATO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/sin_escolarizacion"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/ESCUELAESPECIAL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/escuela_especial"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/JARDIN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/jardin"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/PRIMARIO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/primario"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/SECUNDARIO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/secundario"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/TERCIARIO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/terciario"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/UNIVERSIDAD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/universitario"
                android:textSize="24sp" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>