<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4A4A4A">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_1"
        app:layout_constraintBottom_toTopOf="@+id/CANCELARDISCAPCIDAD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/tipo_discapacidad"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <CheckBox
                android:id="@+id/DEFICIENCIAFISICAMOTOR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/deficiencia_fisica_origen_motor"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/DEFICIENCIAFISICAVISCERAL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/deficiencia_fisica_origen_visceral"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/AUDITIVA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/auditiva"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/DEFICIENCIAINTELECTUAL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/deficiencia_intelectual_mental"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/SENSORIALVISUAL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/deficiencia_sensorial_origen_visual"
                android:textSize="18sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textembarazo"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="#0E5891"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/discapacidad"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/CANCELARDISCAPCIDAD"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button1"
        android:text="@string/cancelar"
        android:textColor="#4A4A4A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/GUARDARDISCAPACIDAD"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button1"
        android:text="@string/guardar"
        android:textColor="#4A4A4A"
        app:layout_constraintBottom_toBottomOf="@+id/CANCELARDISCAPCIDAD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintStart_toEndOf="@+id/CANCELARDISCAPCIDAD"

        app:layout_constraintTop_toTopOf="@+id/CANCELARDISCAPCIDAD" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_1"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textembarazo">

        <RadioGroup
            android:id="@+id/GROUPDISCAPACIDAD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <RadioButton
                android:id="@+id/SIVDISCAPACIDAD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/si"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/NODISCAPACIDAD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/no"
                android:textSize="18sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/certificado_unico_discapacidad"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>